--- a/css/coolcssdemo.css
+++ b/css/coolcssdemo.css
@@ -2,7 +2,7 @@ body,
 html {
     height: 100%;
     margin: 0;
-    font: 400 15px/1.8 "Helvetica Neue", sans-serif;
+    font: 400 15px/1.8 "Comic Sans MS", cursive, sans-serif;
     color: #777;
 }
 
@@ -68,7 +68,7 @@ html {
 h3 {
     letter-spacing: 5px;
     text-transform: uppercase;
-    font: 20px "Helvetica Neue", sans-serif;
+    font: 20px "Comic Sans MS", cursive, sans-serif;
     color: #111;
 }
 
